# ginac

./: .gitmodules  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.CMake  Makefile.am  NEWS  configure.ac
check/: .gitignore  CMakeLists.txt  Makefile.am  bugme_chinrem_gcd.cpp  check_inifcns.cpp  check_lsolve.cpp  check_matrices.cpp  check_numeric.cpp  error_report.h  exam_archive.cpp  exam_chinrem_gcd.cpp  exam_clifford.cpp  exam_color.cpp  exam_cra.cpp  exam_differentiation.cpp  exam_factor.cpp  exam_heur_gcd.cpp  exam_indexed.cpp  exam_inifcns.cpp  exam_inifcns_elliptic.cpp  exam_inifcns_nstdsums.cpp  exam_inifcns_nstdsums.h  exam_lsolve.cpp  exam_match.cpp  exam_matrices.cpp  exam_misc.cpp  exam_mod_gcd.cpp  exam_normalization.cpp  exam_numeric.cpp  exam_paranoia.cpp  exam_parser.cpp  exam_polygcd.cpp  exam_powerlaws.cpp  exam_pseries.cpp  exam_real_imag.cpp  exam_sqrfree.cpp  exam_structure.cpp  genex.cpp  heur_gcd_bug.cpp  match_bug.cpp  (+33 more)
debug/gdb/ginac/: printers.py
doc/: CMakeLists.txt
doc/examples/: CMakeLists.txt  Makefile.am  archive1.cpp  compile1.cpp  compile2.cpp  compile3.cpp  lanczos.cpp  mystring.cpp
doc/reference/: Doxyfooter.in
doc/tutorial/: Makefile.am  ginac.texi
ginac/: CMakeLists.txt  Makefile.am  add.cpp  add.h  archive.cpp  basic.cpp  basic.h  clifford.cpp  color.cpp  constant.cpp  container.h  ex.cpp  ex.h  excompiler.cpp  expair.cpp  expairseq.cpp  exprseq.cpp  exprseq.h  factor.cpp  fail.cpp  fderivative.cpp  function.cpp  function.cppy  function.h  function.hppy  ginac.h  idx.cpp  indexed.cpp  inifcns.cpp  inifcns.h  inifcns_elliptic.cpp  inifcns_gamma.cpp  inifcns_nstdsums.cpp  inifcns_trans.cpp  integral.cpp  integration_kernel.cpp  integration_kernel.h  lst.cpp  lst.h  macromagic.h  (+31 more)
ginac/parser/: debug.h  default_reader.cpp  lexer.cpp  lexer.h  parse_binop_rhs.cpp  parse_context.cpp  parser.cpp  parser_compat.cpp
ginac/polynomial/: chinrem_gcd.cpp  chinrem_gcd.h  collect_vargs.cpp  collect_vargs.h  cra_garner.cpp  cra_garner.h  debug.h  divide_in_z_p.cpp  divide_in_z_p.h  euclid_gcd_wrap.h  eval_point_finder.h  eval_uvar.h  gcd_euclid.h  gcd_uvar.cpp  heur_gcd_uvar.h  interpolate_padic_uvar.h  mgcd.cpp  mod_gcd.cpp  mod_gcd.h  newton_interpolate.h  normalize.cpp  normalize.h  optimal_vars_finder.cpp  optimal_vars_finder.h  pgcd.cpp  pgcd.h  poly_cra.h  prem_uvar.h  primes_factory.h  primpart_content.cpp  remainder.cpp  remainder.h  ring_traits.h  smod_helpers.h  sr_gcd_uvar.h  upoly.h  upoly_io.cpp  upoly_io.h
ginsh/: CMakeLists.txt  Makefile.am  ginsh.1.in  ginsh.h  ginsh_extensions.h  ginsh_lexer.lpp  ginsh_parser.ypp
tools/: CMakeLists.txt  Makefile.am  viewgar.1.in  viewgar.cpp
